# src/models/rss.ts
@@ -1,0 +1,8 @@
+export interface RssItem {
+	title: string
+	link: string
+	pubDate: string
+	showName: string
+	season: number,
+	episode: number, 
+}
