# src/routes/routes.ts
@@ -1,8 +1,10 @@
-import { Router } from "express";
-import feedRoutes from "./feedRoutes";
+import { Router } from 'express'
+import feedRoutes from './feedRoutes'
+import fetchRoutes from './fetchRoutes'
 
-const routes = Router();
+const routes = Router()
 
-routes.use("/feeds", feedRoutes);
+routes.use('/feeds', feedRoutes)
+routes.use('/fetch', fetchRoutes)
 
-export default routes;
+export default routes
